src/test/deca/context/valid/created/objet/cast_int.deca
//Description:
//    cast de float en int
//Resultat :
//    ok
{
    float x;
    int a;
    a = (int) (x);
}